Improve files handling
