# openapi.yaml
@@ -90,6 +90,17 @@ paths:
               schema:
                 type: string
           description: Contents of the file as a string
+        '404':
+          content:
+            application/json:
+              schema:
+                properties:
+                  reason:
+                    type: string
+                required:
+                - reason
+                type: object
+          description: Response to send if the file is not found
       summary: Read the contents of a file at the given path
     put:
       operationId: WriteFile
